--- a/bgm06.css
+++ b/bgm06.css
@@ -213,7 +213,7 @@ a:link {
     height: 500px;
     top: 0;
     left: 684px;
-    content: url(resources/files/musiclib/album/m01.jpg);
+    content: url(resources/files/bgmlib/Album/b06.jfif);
     border-radius: 14px;
   }
   
