added bgm lists

--- a/bgmlib_main.css
+++ b/bgmlib_main.css
@@ -297,7 +297,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m01.jpg);
+  content: url(resources/files/bgmlib/Album/b01.jpg);
   border-radius: 14px;
 }
 
@@ -307,7 +307,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m02.jpg);
+  content: url(resources/files/bgmlib/Album/b02.jpg);
   border-radius: 14px;
 }
 
@@ -317,7 +317,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m03.jpg);
+  content: url(resources/files/bgmlib/Album/b03.jpg);
   border-radius: 14px;
 }
 
@@ -327,7 +327,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m04.png);
+  content: url(resources/files/bgmlib/Album/b04.jpg);
   border-radius: 14px;
 }
 
@@ -337,7 +337,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m05.jpg);
+  content: url(resources/files/bgmlib/Album/b05.jpg);
   border-radius: 14px;
 }
 
@@ -347,7 +347,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m06.jpg);
+  content: url(resources/files/bgmlib/Album/b06.jfif);
   border-radius: 14px;
 }
 
@@ -357,7 +357,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m07.jpg);
+  content: url(resources/files/bgmlib/Album/b07.jpg);
   border-radius: 14px;
 }
 
@@ -367,7 +367,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m08.jpg);
+  content: url(resources/files/bgmlib/Album/b08.jpg);
   border-radius: 14px;
 }
 
@@ -377,7 +377,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m09.jpg);
+  content: url(resources/files/bgmlib/Album/b09.jpg);
   border-radius: 14px;
 }
 
@@ -387,7 +387,7 @@ body {
   height: 211px;
   top: 31px;
   left: 33px;
-  content: url(resources/files/musiclib/album/m10.jpg);
+  content: url(resources/files/bgmlib/Album/b10.jpg);
   border-radius: 14px;
 }
 
